--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,14 @@
 .fedis-main {
+  background-image: -webkit-linear-gradient(325deg, #573e81, #133259 40%, #133259);
+  background-image: -o-linear-gradient(325deg, #573e81, #133259 40%, #133259);
   background-image: linear-gradient(125deg, #573e81, #133259 40%, #133259);
-  color: red;
+  color: block;
   padding: 80px;
-  display: flex;
-  background-clip: border-box; }
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex; }
   .fedis-main h1 {
     font-size: 6em;
     font-family: Arial, Helvetica, sans-serif;
