--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,9 @@
 .fedis-main
 {
     background-image: linear-gradient(125deg, #573e81, #133259 40%, #133259);
-    color:red;
+    color:block;
 	padding: 80px;    
 	display: flex;
 	h1{font-size: 6em; font-family: Arial, Helvetica, sans-serif; text-align: center;font-weight: 100; }
-	background-clip: border-box;
 }
 .footer{color:#888 }
