--- a/src/css/common.css
+++ b/src/css/common.css
@@ -30,99 +30,216 @@
 /* ==========
    公共样式
    ========== */
+body {
+  background-color: #F2F3F4; }
+
 .container {
   width: 1200px; }
 
-header .top {
-  line-height: 40px;
-  height: 40px;
-  background-color: #282928;
-  color: rgba(255, 255, 255, 0.6); }
-  header .top a {
-    color: rgba(255, 255, 255, 0.6);
-    font-size: 12px; }
-  header .top .left {
-    float: left; }
-    header .top .left li {
-      font-size: 12px;
-      float: left; }
-    header .top .left > li:not(:last-child) {
-      margin-right: 20px; }
-  header .top .right {
-    float: right; }
+header {
+  background-color: #fff; }
+  header .top {
+    line-height: 40px;
+    height: 40px;
+    background-color: #282928;
+    color: rgba(255, 255, 255, 0.6); }
+    header .top .container {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -webkit-justify-content: space-between;
+         -moz-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+         -moz-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+    header .top a {
+      color: rgba(255, 255, 255, 0.6);
+      font-size: 12px; }
+    header .top .left {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+         -moz-box-align: center;
+          -ms-flex-align: center;
+              align-items: center; }
+      header .top .left li {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -webkit-align-items: center;
+           -moz-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
+        font-size: 12px; }
+        header .top .left li:before {
+          content: "";
+          display: block;
+          width: 16px;
+          height: 16px;
+          margin-right: 4px;
+          background-repeat: no-repeat;
+          -webkit-background-size: 16px 16px;
+                  background-size: 16px;
+          background-position: center; }
+        header .top .left li.szsy:before {
+          background-image: url(../img/index/shouye-icon.png); }
+        header .top .left li.scbz:before {
+          background-image: url(../img/index/shoucang-icon.png); }
+        header .top .left li.yyxz:before {
+          background-image: url(../img/index/yuyan-icon.png); }
+        header .top .left li.xz:before {
+          width: 24px;
+          height: 24px;
+          -webkit-background-size: 24px 24px;
+                  background-size: 24px;
+          background-image: url(../img/index/yonggaoxz.png); }
+        header .top .left li.xz a {
+          display: -webkit-box;
+          display: -webkit-flex;
+          display: -moz-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-align: center;
+          -webkit-align-items: center;
+             -moz-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          padding: 0 8px;
+          line-height: 22px;
+          height: 24px;
+          color: #1A8CFF;
+          border: 1px solid rgba(26, 140, 255, 0.6);
+          -webkit-border-radius: 4px;
+                  border-radius: 4px; }
+          header .top .left li.xz a:after {
+            content: "";
+            display: block;
+            width: 16px;
+            height: 16px;
+            background-repeat: no-repeat;
+            -webkit-background-size: 16px 16px;
+                    background-size: 16px;
+            background-position: center;
+            background-image: url(../img/index/xiazai-icon.png);
+            margin-left: 7px; }
+      header .top .left > li:not(:last-child) {
+        margin-right: 20px; }
     header .top .right li {
       font-size: 12px;
       float: left; }
-    header .top .right > li:not(:last-child) {
-      margin-right: 20px; }
-
-header .main {
-  width: 1200px;
-  height: 84px;
-  font-size: 14px;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-     -moz-box-align: center;
-      -ms-flex-align: center;
-          align-items: center; }
-  header .main .brand {
-    margin-right: 18px; }
-  header .main ul {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-       -moz-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    line-height: 84px; }
-    header .main ul li {
-      float: left;
-      position: relative;
-      min-width: 84px;
-      text-align: center; }
-      header .main ul li a {
-        color: #666666; }
-      header .main ul li.active a {
-        color: #333;
-        font-weight: bold; }
-      header .main ul li.active:after {
-        content: "";
-        position: absolute;
+      header .top .right li a {
+        display: inline-block;
+        line-height: 12px;
+        padding: 0 8px;
+        border-right: 1px solid rgba(255, 255, 255, 0.2); }
+    header .top .right li:nth-last-child(2) a {
+      border-right: none; }
+    header .top .right .all-game-btn {
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+         -moz-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      margin-left: 16px;
+      padding: 0 13px; }
+      header .top .right .all-game-btn a {
         display: block;
-        width: 84px;
-        height: 4px;
-        background-color: #146CFE;
-        -webkit-border-radius: 4px;
-                border-radius: 4px;
-        bottom: 0; }
-  header .main .search-wrap {
-    width: 170px;
+        line-height: 40px; }
+      header .top .right .all-game-btn:after {
+        content: "";
+        display: block;
+        width: 8px;
+        height: 8px;
+        background-repeat: no-repeat;
+        -webkit-background-size: 8px 8px;
+                background-size: 8px;
+        background-position: center;
+        background-image: url(../img/index/xiangxia-icon.png);
+        margin-left: 6px; }
+  header .main {
+    width: 1200px;
+    height: 84px;
+    font-size: 14px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
     display: -ms-flexbox;
-    display: flex; }
-    header .main .search-wrap .input {
-      width: 136px;
-      border: 1px solid #e6e6e6;
-      -webkit-border-radius: 4px;
-              border-radius: 4px;
-      padding: 0 10px; }
-    header .main .search-wrap .search-btn {
-      width: 34px;
-      height: 34px;
-      -webkit-border-radius: 0px 4px 4px 0px;
-              border-radius: 0px 4px 4px 0px;
-      background-color: #1A8CFF;
-      background-image: url(../img/index/shousou-icon.png);
-      background-repeat: no-repeat;
-      -webkit-background-size: 20px 20px;
-              background-size: 20px;
-      background-position: center; }
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    header .main .brand {
+      margin-right: 18px; }
+    header .main ul {
+      -webkit-box-flex: 1;
+      -webkit-flex: 1;
+         -moz-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1;
+      line-height: 84px; }
+      header .main ul li {
+        float: left;
+        position: relative;
+        min-width: 84px;
+        text-align: center; }
+        header .main ul li a {
+          color: #666666; }
+        header .main ul li.active a {
+          color: #333;
+          font-weight: bold; }
+        header .main ul li.active:after {
+          content: "";
+          position: absolute;
+          display: block;
+          width: 84px;
+          height: 4px;
+          background-color: #146CFE;
+          -webkit-border-radius: 4px;
+                  border-radius: 4px;
+          bottom: 0; }
+    header .main .search-wrap {
+      width: 170px;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: flex; }
+      header .main .search-wrap .input {
+        width: 136px;
+        -webkit-border-radius: 4px 0px 0px 4px;
+                border-radius: 4px 0px 0px 4px; }
+      header .main .search-wrap .search-btn {
+        width: 34px;
+        height: 34px;
+        -webkit-border-radius: 0px 4px 4px 0px;
+                border-radius: 0px 4px 4px 0px;
+        background-color: #1A8CFF;
+        background-image: url(../img/index/shousou-icon.png);
+        background-repeat: no-repeat;
+        -webkit-background-size: 20px 20px;
+                background-size: 20px;
+        background-position: center; }
 
 footer {
   background-color: #282928;
