--- a/src/css/normalize.css
+++ b/src/css/normalize.css
@@ -103,6 +103,7 @@ template, /* 1 */
  */
 
 a {
+	color: inherit;
 	text-decoration: none;
     background-color: transparent; /* 1 */
     -webkit-text-decoration-skip: objects; /* 2 */
@@ -139,6 +140,9 @@ abbr[title] {
 b,
 strong {
     font-weight: inherit;
+}
+p{
+	margin: 0;
 }
 
 /**
@@ -272,6 +276,8 @@ button,
 input,
 select,
 textarea {
+    border: 1px solid rgba(230, 230, 230, 1);
+    padding: 0 10px;
     font: inherit; /* 1 */
     margin: 0; /* 2 */
 }
@@ -303,7 +309,16 @@ button,
 select { /* 1 */
     text-transform: none;
 }
-
+button{
+	background-color: #1A8CFF;
+    color: #FFFFFF;
+    padding: 12px;
+    border: none;
+    outline: none;
+    border-radius:4px;
+    font-size: 14px;
+    cursor: pointer;
+}
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
  *    controls in Android 4.
