--- a/src/include/header.html
+++ b/src/include/header.html
@@ -2,17 +2,17 @@
 		<nav class="top">
 			<div class="container center-block">
 				<ul class="left">
-					<li><a href="#">设为首页</a></li>
-					<li><a href="#">收藏本站</a></li>
-					<li><a href="#">语言选择</a></li>
-					<li><a href="#">APP下载</a></li>
+					<li class="szsy"><a href="#">设为首页</a></li>
+					<li class="scbz"><a href="#">收藏本站</a></li>
+					<li class="yyxz"><a href="#">语言选择</a></li>
+					<li class="xz"><a href="#">永高APP下载</a></li>
 				</ul>
 				<ul class="right">
 					<li><a href="#">登录</a></li>
 					<li><a href="#">注册</a></li>
 					<li><a href="#">客服中心</a></li>
 					<li><a href="#">免费试玩</a></li>
-					<li><a href="#">所有游戏 </a></li>
+					<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
 				</ul>
 			</div>
 		</nav>
