--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,6 +1,7 @@
 /* ==========
    工具样式
    ========== */
+
 .center-block {
     display: block;
     margin-right: auto;
@@ -14,6 +15,7 @@
 .pull-left {
     float: left !important;
 }
+
 .hide {
     display: none !important;
 }
@@ -21,6 +23,7 @@
 .show {
     display: block !important;
 }
+
 .clearfix:before,
 .clearfix:after {
     content: " ";
@@ -31,152 +34,239 @@
     clear: both;
 }
 
+
 /* ==========
    公共样式
    ========== */
-.container{
-	width: 1200px;
+body{
+    background-color: #F2F3F4;
 }
-header{
-	.top{
-		line-height: 40px;
-		height: 40px;
-		background-color: #282928;
-		color: rgba(255,255,255,0.6);
-		a{
-			color: rgba(255,255,255,0.6);
-			font-size: 12px;
-		}
-		.left{
-			float: left;
-			li{
-				font-size: 12px;
-				float: left;
-				
-			}
-			&>li:not(:last-child){
-				margin-right: 20px;
-			}
-		}
-		.right{
-			float: right;
-			li{
-				font-size: 12px;
-				float: left;
-			}
-			&>li:not(:last-child){
-				margin-right: 20px;
-			}
-		}
-	}
-	.main {
-		width: 1200px;
-		height: 84px;
-		font-size: 14px;
-		display: flex;
-		align-items: center;
-		.brand{
-			margin-right: 18px;
-		}
-		ul{
-		    flex: 1;
-			line-height: 84px;
-			li{
-				float: left;
-				position: relative;
-				min-width: 84px; 
-				text-align: center;
-				a{
-					color:#666666; 
-				} 
-				&.active a{
-				    color: #333;
-				    font-weight: bold;
-				}
-				&.active:after{
-				    content: "";
-				    position: absolute;
-				    display:block;
-				    width: 84px;
-				    height:4px;
-			        background-color: #146CFE;
-			        border-radius: 4px;
-			        bottom: 0;
-				}
-			}
-		}
-		.search-wrap{
-		    width: 170px;
-		    display: flex;
-		    .input{
-		        width: 136px;
-		        border:1px solid rgba(230,230,230,1);
-                border-radius:4px;
-                padding: 0 10px;
-		    }
-		    .search-btn{
-		        width:34px;
-		        height: 34px;
-		        border-radius:0px 4px 4px 0px;
-		        background-color: #1A8CFF;
-		        background-image: url(../img/index/shousou-icon.png);
-		        background-repeat: no-repeat;
-		        background-size: 20px;
-		        background-position: center;
-		    }
-		} 
-	}
+.container {
+    width: 1200px;
 }
 
-footer{
+header {
+    background-color: #fff;
+    .top {
+        .container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        line-height: 40px;
+        height: 40px;
+        background-color: #282928;
+        color: rgba(255, 255, 255, 0.6);
+        a {
+            color: rgba(255, 255, 255, 0.6);
+            font-size: 12px;
+        }
+        .left {
+            display: flex;
+            align-items: center;
+            li {
+                display: flex;
+                align-items: center;
+                font-size: 12px;
+                &:before {
+                    content: "";
+                    display: block;
+                    width: 16px;
+                    height: 16px;
+                    margin-right: 4px;
+                    background-repeat: no-repeat;
+                    background-size: 16px;
+                    background-position: center;
+                }
+                &.szsy:before {
+                    background-image: url(../img/index/shouye-icon.png);
+                }
+                &.scbz:before {
+                    background-image: url(../img/index/shoucang-icon.png);
+                }
+                &.yyxz:before {
+                    background-image: url(../img/index/yuyan-icon.png);
+                }
+                &.xz:before {
+                    width: 24px;
+                    height: 24px;
+                    background-size: 24px;
+                    background-image: url(../img/index/yonggaoxz.png);
+                }
+                &.xz {
+                    a {
+                        display: flex;
+                        align-items: center;
+                        padding: 0 8px;
+                        line-height: 22px;
+                        ;
+                        height: 24px;
+                        color: #1A8CFF;
+                        border: 1px solid rgba(26, 140, 255, 0.6);
+                        border-radius: 4px;
+                        &:after {
+                            content: "";
+                            display: block;
+                            width: 16px;
+                            height: 16px;
+                            background-repeat: no-repeat;
+                            background-size: 16px;
+                            background-position: center;
+                            background-image: url(../img/index/xiazai-icon.png);
+                            margin-left: 7px;
+                        }
+                    }
+                }
+            }
+            &>li:not(:last-child) {
+                margin-right: 20px;
+            }
+        }
+        .right {
+            li {
+                font-size: 12px;
+                float: left;
+                a {
+                    display: inline-block;
+                    line-height: 12px;
+                    padding: 0 8px;
+                    border-right: 1px solid rgba(255, 255, 255, 0.2);
+                }           
+            }
+            li:nth-last-child(2){            
+                a{
+                    border-right: none;
+                }
+            }
+            .all-game-btn {
+                display: flex;
+                align-items: center;
+                margin-left: 16px;
+                padding: 0 13px;
+                a {
+                    display: block;
+                    line-height: 40px;
+                }
+                &:after{
+                    content: "";
+                    display: block;
+                    width: 8px;
+                    height: 8px;
+                    background-repeat: no-repeat;
+                    background-size: 8px;
+                    background-position: center;
+                    background-image: url(../img/index/xiangxia-icon.png);
+                    margin-left: 6px;
+                }
+            }
+        }
+    }
+    .main {
+        width: 1200px;
+        height: 84px;
+        font-size: 14px;
+        display: flex;
+        align-items: center;
+        .brand {
+            margin-right: 18px;
+        }
+        ul {
+            flex: 1;
+            line-height: 84px;
+            li {
+                float: left;
+                position: relative;
+                min-width: 84px;
+                text-align: center;
+                a {
+                    color: #666666;
+                }
+                &.active a {
+                    color: #333;
+                    font-weight: bold;
+                }
+                &.active:after {
+                    content: "";
+                    position: absolute;
+                    display: block;
+                    width: 84px;
+                    height: 4px;
+                    background-color: #146CFE;
+                    border-radius: 4px;
+                    bottom: 0;
+                }
+            }
+        }
+        .search-wrap {
+            width: 170px;
+            display: flex;
+            .input {
+                width: 136px;
+                border-radius:  4px 0px 0px 4px;
+            }
+            .search-btn {
+                width: 34px;
+                height: 34px;
+                border-radius: 0px 4px 4px 0px;
+                background-color: #1A8CFF;
+                background-image: url(../img/index/shousou-icon.png);
+                background-repeat: no-repeat;
+                background-size: 20px;
+                background-position: center;
+            }
+        }
+    }
+}
+
+footer {
     background-color: #282928;
     height: 340px;
     padding-top: 30px;
-    .top{
+    .top {
         display: flex;
         padding-bottom: 23px;
-        border-bottom: 1px solid rgba(255,255,255,0.1);;
-        .left{
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+        .left {
             width: 285px;
             color: #CCCCCC;
             font-size: 12px;
-            .item{
+            .item {
                 display: flex;
                 align-items: center;
                 margin-bottom: 20px;
-                &:before{
+                &:before {
                     content: "";
-                    display:block;
+                    display: block;
                     width: 30px;
-                    height:30px; 
+                    height: 30px;
                     margin-right: 10px;
                     background-repeat: no-repeat;
                     background-size: 30px;
                     background-position: center;
                 }
-                &.qq-icon:before{
+                &.qq-icon:before {
                     background-image: url(../img/index/kefuqq-icon.png);
                 }
-                &.tel-icon:before{
+                &.tel-icon:before {
                     background-image: url(../img/index/rexiandianhua-icon.png);
                 }
-                &.email-icon:before{
+                &.email-icon:before {
                     background-image: url(../img/index/tousuyouxiang-icon.png);
                 }
             }
         }
-        .right{
+        .right {
             padding-top: 7px;
             font-size: 12px;
             color: #666666;
-            .list{
+            .list {
                 display: flex;
                 margin-bottom: 19px;
-                li{
+                li {
                     margin-right: 18px;
-                }  
+                }
             }
-            .img{
+            .img {
                 width: 866px;
                 height: 40px;
                 background-image: url(../img/index/hezuohuoban.png);
@@ -186,83 +276,83 @@ footer{
             }
         }
     }
-    .bottom{
-            display: flex;
-            padding-top: 30px;
-            .left {
-                width: 265px;
-                height: 64px;
-                background-image: url(../img/index/logo-bai.png);
-                background-repeat: no-repeat;
-                background-size: 196px 46px;
-                background-position: left center; 
-            }
-            .center{
-                width: 570px;
-                padding: 0 20px;
-                border-left: 1px solid rgba(255,255,255,0.1);
-                border-right: 1px solid rgba(255,255,255,0.1);
-                font-size: 12px;
-                color: #666666;
-                .list{
-                    display: flex;
-                    margin-bottom: 20px;
-                    li{
-                       padding-left: 9px;
-                       line-height: 12px;
-                       margin-right: 9px;
-                       border-left: 1px solid #666;
-                       &:first-child{
+    .bottom {
+        display: flex;
+        padding-top: 30px;
+        .left {
+            width: 265px;
+            height: 64px;
+            background-image: url(../img/index/logo-bai.png);
+            background-repeat: no-repeat;
+            background-size: 196px 46px;
+            background-position: left center;
+        }
+        .center {
+            width: 570px;
+            padding: 0 20px;
+            border-left: 1px solid rgba(255, 255, 255, 0.1);
+            border-right: 1px solid rgba(255, 255, 255, 0.1);
+            font-size: 12px;
+            color: #666666;
+            .list {
+                display: flex;
+                margin-bottom: 20px;
+                li {
+                    padding-left: 9px;
+                    line-height: 12px;
+                    margin-right: 9px;
+                    border-left: 1px solid #666;
+                    &:first-child {
                         padding-left: 0;
                         border-left: none;
-                       }
                     }
-                }
-                .tip{
-                    margin-bottom: 10px;
                 }
             }
-            .right{
-                flex: 1;
-                padding-left: 20px;
-                .list{
-                    display: flex;
-                    .item{
-                        margin-right: 25px;
-                        .text{
-                            margin-bottom: 8px;;
-                            color: #CCCCCC;
-                            font-size: 12px;
-                        }
-                        .sub-text{
-                            color: #666666;
-                            font-size: 10px;
-                        }
-                        &:before{
-                            content: "";
-                            display:block;
-                            width: 26px;
-                            height:26px; 
-                            margin-bottom: 8px;
-                            background-repeat: no-repeat;
-                            background-size: 26px;
-                            background-position: center;
-                        }
-                        &.bz:before{
-                            background-image: url(../img/index/jishu-icon.png);
-                        }
-                        &.fw:before{
-                            background-image: url(../img/index/chanpinfuwu-icon.png);
-                        }
-                        &.qk:before{
-                            background-image: url(../img/index/gaoxiao-icon.png);
-                        }
+            .tip {
+                margin-bottom: 10px;
+            }
+        }
+        .right {
+            flex: 1;
+            padding-left: 20px;
+            .list {
+                display: flex;
+                .item {
+                    margin-right: 25px;
+                    .text {
+                        margin-bottom: 8px;
+                        ;
+                        color: #CCCCCC;
+                        font-size: 12px;
                     }
-                    .item:last-child{
-                        margin-right: 0;
+                    .sub-text {
+                        color: #666666;
+                        font-size: 10px;
+                    }
+                    &:before {
+                        content: "";
+                        display: block;
+                        width: 26px;
+                        height: 26px;
+                        margin-bottom: 8px;
+                        background-repeat: no-repeat;
+                        background-size: 26px;
+                        background-position: center;
+                    }
+                    &.bz:before {
+                        background-image: url(../img/index/jishu-icon.png);
+                    }
+                    &.fw:before {
+                        background-image: url(../img/index/chanpinfuwu-icon.png);
+                    }
+                    &.qk:before {
+                        background-image: url(../img/index/gaoxiao-icon.png);
                     }
                 }
-                
-            } 
+                .item:last-child {
+                    margin-right: 0;
+                }
+            }
         }
+    }
 }
