--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,8 +5,7 @@
   .swiper-container .swiper-slide {
     background-repeat: no-repeat;
     background-position: center;
-    -webkit-background-size: cover;
-            background-size: cover; }
+    background-size: cover; }
     .swiper-container .swiper-slide a {
       display: block;
       width: 100%;
@@ -16,8 +15,7 @@
   .swiper-container .swiper-pagination-bullet {
     width: 34px;
     height: 6px;
-    -webkit-border-radius: 3px;
-            border-radius: 3px;
+    border-radius: 3px;
     background: #fff;
     opacity: 1; }
   .swiper-container .swiper-pagination-bullet-active {
@@ -25,10 +23,6 @@
 
 .login-area {
   position: relative;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: flex;
   margin-top: -190px;
   z-index: 10; }
@@ -40,32 +34,24 @@
   .login-area .item {
     background-color: #fff;
     height: 266px;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-       -moz-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+    flex: 1;
     margin-right: 20px;
-    -webkit-border-radius: 4px;
-            border-radius: 4px;
+    border-radius: 4px;
     padding: 20px;
     background-repeat: no-repeat;
-    -webkit-background-size: 100% auto;
-            background-size: 100% auto;
+    background-size: 100% auto;
     background-position: left top; }
     .login-area .item:last-child {
       margin-right: 0; }
     .login-area .item .input {
       width: 244px;
       height: 36px;
-      -webkit-border-radius: 4px;
-              border-radius: 4px;
+      border-radius: 4px;
       padding-left: 40px;
       font-size: 12px;
       color: #999999;
       background-repeat: no-repeat;
-      -webkit-background-size: 20px 20px;
-              background-size: 20px;
+      background-size: 20px;
       background-position: 10px center; }
       .login-area .item .input:first-child {
         margin-bottom: 14px; }
@@ -78,58 +64,26 @@
       line-height: 12px;
       margin-bottom: 10px; }
     .login-area .item .btn-group {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-         -moz-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
+      justify-content: space-between;
       margin-bottom: 14px; }
       .login-area .item .btn-group .remb, .login-area .item .btn-group a {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
         display: flex;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-           -moz-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
+        align-items: center;
         color: #999999;
         font-size: 12px;
         font-weight: 400; }
         .login-area .item .btn-group .remb input, .login-area .item .btn-group a input {
           margin-right: 6px; }
     .login-area .item .login-method-wrap {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-         -moz-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
-      -webkit-box-align: center;
-      -webkit-align-items: center;
-         -moz-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
+      justify-content: space-between;
+      align-items: center;
       line-height: 24px;
       font-size: 12px;
       font-weight: 400;
       color: #999999; }
       .login-area .item .login-method-wrap .group {
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -moz-box;
-        display: -ms-flexbox;
         display: flex; }
         .login-area .item .login-method-wrap .group li {
           display: inline-block;
@@ -156,8 +110,7 @@
             width: 16px;
             height: 16px;
             background-repeat: no-repeat;
-            -webkit-background-size: 16px 16px;
-                    background-size: 16px;
+            background-size: 16px;
             background-position: center; }
           .login-area .item .login-method-wrap .group li.qq:before {
             background-image: url(../img/index/qq-default.png); }
@@ -205,18 +158,10 @@
       font-size: 12px;
       color: #666666; }
     .trans-info-area .left .content {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
       display: flex;
       background-color: #fff; }
       .trans-info-area .left .content .item {
-        -webkit-box-flex: 1;
-        -webkit-flex: 1;
-           -moz-box-flex: 1;
-            -ms-flex: 1;
-                flex: 1; }
+        flex: 1; }
         .trans-info-area .left .content .item .text-wrap {
           margin: 30px 0;
           font-size: 16px;
@@ -253,9 +198,6 @@
         margin-right: 12px;
         width: 6px;
         height: 18px;
-        background: -webkit-gradient(linear, left bottom, left top, from(#ff3838), to(#ffb922));
-        background: -webkit-linear-gradient(bottom, #ff3838 0%, #ffb922 100%);
-        background: -o-linear-gradient(bottom, #ff3838 0%, #ffb922 100%);
         background: linear-gradient(0deg, #ff3838 0%, #ffb922 100%); }
       .game-area .header .title span {
         vertical-align: middle; }
@@ -271,8 +213,7 @@
         width: 16px;
         height: 16px;
         background-repeat: no-repeat;
-        -webkit-background-size: 16px 16px;
-                background-size: 16px;
+        background-size: 16px;
         background-position: center;
         background-image: url(../img/index/huanyipi.png);
         margin-left: 11px; }
@@ -281,31 +222,15 @@
       width: 100%;
       display: inline-block; }
   .game-area .content {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-       -moz-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
+    justify-content: space-between; }
     .game-area .content .item {
       width: 284px;
       height: 232px;
       background-color: #fff; }
     .game-area .content .item-bottom {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -moz-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-         -moz-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between; }
+      justify-content: space-between; }
       .game-area .content .item-bottom .left {
         margin-left: 12px; }
         .game-area .content .item-bottom .left .pt-title {
@@ -324,8 +249,7 @@
         line-height: 10px;
         height: 24px;
         border: 1px solid #CCCCCC;
-        -webkit-border-radius: 4px;
-                border-radius: 4px;
+        border-radius: 4px;
         font-size: 12px;
         font-weight: 400;
         padding: 5px 8px;
@@ -337,3 +261,5 @@
           border: 1px solid #1A8CFF;
           background-color: #1A8CFF;
           color: #fff; }
+
+/*# sourceMappingURL=maps/index.css.map */
