--- a/src/include/header.html
+++ b/src/include/header.html
@@ -25,7 +25,7 @@
 				<li><a href="#">彩票游戏</a></li>
 				<li><a href="#">电子游艺</a></li>
 				<li><a href="#">优惠活动</a></li>
-				<li><a href="#">我的钱包</a></li>
+				<li><a href="../centerWallet.html">我的钱包</a></li>
 				<li><a href="#">用户中心</a></li>
 				<li><a href="#">代理注册</a></li>
 			</ul>
