--- a/src/include/header.html
+++ b/src/include/header.html
@@ -10,7 +10,7 @@
 				<ul class="right">
 					<li><a href="#">登录</a></li>
 					<li><a href="#">注册</a></li>
-					<li><a href="#">客服中心</a></li>
+					<li><a href="customerService.html">客服中心</a></li>
 					<li><a href="#">免费试玩</a></li>
 					<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
 				</ul>
@@ -25,8 +25,8 @@
 				<li><a href="#">彩票游戏</a></li>
 				<li><a href="#">电子游艺</a></li>
 				<li><a href="#">优惠活动</a></li>
-				<li><a href="../centerWallet.html">我的钱包</a></li>
-				<li><a href="#">用户中心</a></li>
+				<li><a href="centerWallet.html">我的钱包</a></li>
+				<li><a href="userCenter.html">用户中心</a></li>
 				<li><a href="#">代理注册</a></li>
 			</ul>
 	
