--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -297,9 +297,12 @@ optgroup {
 
 button,
 input { /* 1 */
-    overflow: visible;
+	overflow: visible;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+	-webkit-appearance: none;
+}
 /**
  * Remove the inheritance of text transform in Edge, Firefox, and IE.
  * 1. Remove the inheritance of text transform in Firefox.
@@ -309,16 +312,7 @@ button,
 select { /* 1 */
     text-transform: none;
 }
-button{
-	background-color: #1A8CFF;
-    color: #FFFFFF;
-    padding: 12px;
-    border: none;
-    outline: none;
-    border-radius:4px;
-    font-size: 14px;
-    cursor: pointer;
-}
+
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
  *    controls in Android 4.
