--- a/src/include/userSidebar.html
+++ b/src/include/userSidebar.html
@@ -1,14 +1,14 @@
 <ul class="sidebar">
 	<li class="item active">
-		<a href=""><i class="icon"></i>我的账号</a>
+		<a href="userCenter.html"><i class="icon"></i>我的账号</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>我的游戏</a>
+		<a href="myGame.html"><i class="icon"></i>我的游戏</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>二级密码</a>
+		<a href="securityPwd.html"><i class="icon"></i>二级密码</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>我的消息</a>
+		<a href="myinfo.html"><i class="icon"></i>我的消息</a>
 	</li>
 </ul>
