--- a/src/include/header.html
+++ b/src/include/header.html
@@ -19,7 +19,7 @@
 		<nav class="main center-block">
 			<div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
 			<ul>
-				<li class="active"><a href="#">首页</a></li>
+				<li class="active"><a href="index.html">首页</a></li>
 				<li><a href="#">真人视讯</a></li>
 				<li><a href="#">体育赛事</a></li>
 				<li><a href="#">彩票游戏</a></li>
