--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -55,7 +55,7 @@ button {
 button.primary{
 	background-color: #1A8CFF;
     color: #FFFFFF;
-    padding: 12px;
+    padding: 4px 12px;
     border: none;
     outline: none;
     border-radius:4px;
