--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -73,8 +73,9 @@
             background-image: url(../img/index/mima_icon-default.png);
         }
         .btn{
-            width: 100%;
-            line-height: 12px;
+			width: 100%;
+			height:36px;
+            line-height: 1;
             margin-bottom: 10px;
         }
         .btn-group{
