--- a/src/include/custServerSidebar.html
+++ b/src/include/custServerSidebar.html
@@ -1,15 +1,15 @@
 <ul class="sidebar">
 	<li class="item active">
-		<a href=""><i class="icon"></i>密码申诉</a>
+		<a href="customerService.html"><i class="icon"></i>密码申诉</a>
 	</li>
 	<li class="item">
 		<a href=""><i class="icon"></i>账号申诉</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>充值帮助</a>
+		<a href="helpRecharge.html"><i class="icon"></i>充值帮助</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>提现帮助</a>
+		<a href="helpWithdraw.html"><i class="icon"></i>提现帮助</a>
 	</li>
 	<li class="item">
 		<a href=""><i class="icon"></i>用户协议</a>
