--- a/src/include/walletSidebar.html
+++ b/src/include/walletSidebar.html
@@ -1,12 +1,12 @@
 <ul class="sidebar">
 	<li class="item active">
-		<a href=""><i class="icon"></i>中心钱包</a>
+		<a href="centerWallet.html"><i class="icon"></i>中心钱包</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>游戏钱包</a>
+		<a href="gameWallet.html"><i class="icon"></i>游戏钱包</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>充值</a>
+		<a href="recharge.html"><i class="icon"></i>充值</a>
 	</li>
 	<li class="item">
 		<a href=""><i class="icon"></i>提现</a>
