--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -63,6 +63,44 @@ button.primary{
     cursor: pointer;
 }
 
+.yg-checkbox {
+	position: relative;
+	width: 20px;
+	height: 20px;
+	-webkit-appearance: none;
+	background-color: #fff;
+	border: 1px solid #999999;
+	border-radius: 2px;
+
+	&::before {
+		content: "";
+		position: absolute;
+		left: 0;
+		top: 0;
+		border-top: 2px solid #f2f2f2;
+		border-left: 2px solid #f2f2f2;
+		width: 100%;
+		height: 100%;
+	}
+	&:checked,
+	&:focus {
+		border-color: #fe5803;
+		outline: none;
+	}
+
+	&:checked::after {
+		content: '';
+		display: block;
+		height: 6px;
+		width: 10px;
+		border: 0 solid #fe5803;
+		border-width: 0 0 2px 2px;
+		transform: rotate(-45deg);
+		position: absolute;
+		top: 5px;
+		left: 4px;
+	}
+}
 
 .container {
     width: 1200px;
@@ -237,7 +275,18 @@ header {
                 background-size: 20px;
                 background-position: center;
             }
-        }
+		}
+		.yg-title{
+			padding-left: 20px;
+			font-size: 18px;
+			color: #333333;
+			border-left: 1px solid #E6E6E6;
+			span{
+				display: block;
+				padding-bottom: 4px;
+				border-bottom: 3px solid #1A8CFF;
+			}
+		}
     }
 }
 
