--- a/src/scss/wallet.scss
+++ b/src/scss/wallet.scss
@@ -1,4 +1,4 @@
-.center-wallet{
+.user-wallet{
     display: flex;
     min-height: 806px;
     margin-top: 20px;
@@ -21,32 +21,6 @@
                 border-bottom: 3px solid #1A8CFF;
             }
         }
-        .currency-list{
-            width: 760px;
-			margin: 0 auto;
-			margin-top: 10px;
-            .item{
-                display: flex;
-                align-items: center;
-                height: 78px;
-                border-bottom: 1px solid #f0f0f0;
-                .currency{
-                    font-size:14px;
-                    color: #333;
-                }
-                .amount{
-                    flex:1;
-                    margin-right: 30px;
-                    text-align: right;
-                    font-weight:bold;
-                    font-size:16px;
-                    color: #333;
-                }
-                .detail{
-                    font-size: 12px;
-                    color: #FF701A;
-                }
-            }
-        }
+        
     }
 }
