--- a/src/include/userInfo.html
+++ b/src/include/userInfo.html
@@ -1,6 +1,6 @@
 <section class="user-info">
 	<div class="user-avatar-wrap">
-		<img src="" alt="">
+		<img src="../img/userCenter/default.png" alt="">
 	</div>
 	<div class="info">
 		<div class="item"><span class="account">账号：18819456975</span><span class="time">上次登陆时间：2019-01-04 22:25:47</span></div>
@@ -12,8 +12,8 @@
 		<div class="btn-group">
 			<button><a href="">我要充值</a></button>
 			<button><a href="">投注记录</a></button>
-			<button><a href=""></a>财务账单</a></button>
-			<button><a href=""></a>银行卡</a></button>
+			<button><a href="">财务账单</a></button>
+			<button><a href="myCard.html">银行卡</a></button>
 		</div>
 	</div>
 </section>
