--- a/src/include/walletSidebar.html
+++ b/src/include/walletSidebar.html
@@ -1,17 +1,17 @@
 <ul class="sidebar">
 	<li class="item active">
-		<a href="centerWallet.html"><i class="icon"></i>中心钱包</a>
+		<a href="centerWallet.html"><i class="icon zxqb"></i>中心钱包</a>
 	</li>
 	<li class="item">
-		<a href="gameWallet.html"><i class="icon"></i>游戏钱包</a>
+		<a href="gameWallet.html"><i class="icon yxqb"></i>游戏钱包</a>
 	</li>
 	<li class="item">
-		<a href="recharge.html"><i class="icon"></i>充值</a>
+		<a href="recharge.html"><i class="icon cz"></i>充值</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>提现</a>
+		<a href="withdraw.html"><i class="icon tx"></i>提现</a>
 	</li>
 	<li class="item">
-		<a href=""><i class="icon"></i>额度转换</a>
+		<a href=""><i class="icon edzh"></i>额度转换</a>
 	</li>
 </ul>
