--- a/src/include/header.html
+++ b/src/include/header.html
@@ -1,38 +1,58 @@
 <header>
-		<nav class="top">
-			<div class="container center-block">
-				<ul class="left">
-					<li class="szsy"><a href="#">设为首页</a></li>
-					<li class="scbz"><a href="#">收藏本站</a></li>
-					<li class="yyxz"><a href="#">语言选择</a></li>
-					<li class="xz"><a href="#">永高APP下载</a></li>
-				</ul>
-				<ul class="right">
-					<li><a href="#">登录</a></li>
-					<li><a href="#">注册</a></li>
-					<li><a href="customerService.html">客服中心</a></li>
-					<li><a href="#">免费试玩</a></li>
-					<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
-				</ul>
-			</div>
-		</nav>
-		<nav class="main center-block">
-			<div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
-			<ul>
-				<li class="active"><a href="index.html">首页</a></li>
-				<li><a href="#">真人视讯</a></li>
-				<li><a href="#">体育赛事</a></li>
-				<li><a href="#">彩票游戏</a></li>
-				<li><a href="#">电子游艺</a></li>
-				<li><a href="#">优惠活动</a></li>
-				<li><a href="centerWallet.html">我的钱包</a></li>
-				<li><a href="userCenter.html">用户中心</a></li>
-				<li><a href="#">代理注册</a></li>
+	<nav class="top">
+		<div class="container center-block">
+			<ul class="left">
+				<li class="szsy"><a href="#">设为首页</a></li>
+				<li class="scbz"><a href="#">收藏本站</a></li>
+				<li class="yyxz"><a href="#">语言选择</a></li>
+				<li class="xz"><a href="#">永高APP下载</a></li>
 			</ul>
-	
-			<div class="search-wrap">
-				<input class="input" type="input"  placeholder="Search">
-				<div class="search-btn"></div>
-			</div>
-		</nav>
-	</header>
+			<ul class="right">
+				<li><a href="#">登录</a></li>
+				<li><a href="#">注册</a></li>
+				<li><a href="customerService.html">客服中心</a></li>
+				<li><a href="#">免费试玩</a></li>
+				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
+			</ul>
+		</div>
+	</nav>
+	<!-- 登陆后navtop -->
+	<!-- <nav class="top">
+		<div class="container center-block">
+			<ul class="left">
+				<li class="szsy"><a href="#">设为首页</a></li>
+				<li class="scbz"><a href="#">收藏本站</a></li>
+				<li class="yyxz"><a href="#">语言选择</a></li>
+				<li class="xz"><a href="#">永高APP下载</a></li>
+			</ul>
+			<ul class="right">
+				<li><a href="#">账号：18848614754</a></li>
+				<li><a href="#">注销</a></li>
+				<li><a href="customerService.html">客服中心</a></li>
+				<li><a href="#">消息<span class="info-num">(10)</span></a></li>
+				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
+			</ul>
+		</div>
+	</nav> -->
+	<!-- 登陆后navtop END -->
+
+	<nav class="main center-block">
+		<div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
+		<ul>
+			<li class="active"><a href="index.html">首页</a></li>
+			<li><a href="#">真人视讯</a></li>
+			<li><a href="#">体育赛事</a></li>
+			<li><a href="#">彩票游戏</a></li>
+			<li><a href="#">电子游艺</a></li>
+			<li><a href="#">优惠活动</a></li>
+			<li><a href="centerWallet.html">我的钱包</a></li>
+			<li><a href="userCenter.html">用户中心</a></li>
+			<li><a href="registAgent.html">代理注册</a></li>
+		</ul>
+
+		<div class="search-wrap">
+			<input class="input" type="input" placeholder="搜索你喜欢的游戏">
+			<div class="search-btn"></div>
+		</div>
+	</nav>
+</header>
