--- a/src/include/header2.html
+++ b/src/include/header2.html
@@ -1,23 +1,44 @@
 <header>
-		<nav class="top">
-			<div class="container center-block">
-				<ul class="left">
-					<li class="szsy"><a href="#">设为首页</a></li>
-					<li class="scbz"><a href="#">收藏本站</a></li>
-					<li class="yyxz"><a href="#">语言选择</a></li>
-					<li class="xz"><a href="#">永高APP下载</a></li>
-				</ul>
-				<ul class="right">
-					<li><a href="#">登录</a></li>
-					<li><a href="#">注册</a></li>
-					<li><a href="customerService.html">客服中心</a></li>
-					<li><a href="#">免费试玩</a></li>
-					<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
-				</ul>
-			</div>
-		</nav>
-		<nav class="main center-block">
-			<div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
-			<div class="yg-title"><span>添加银行卡</span></div>
-		</nav>
-	</header>
+	<nav class="top">
+		<div class="container center-block">
+			<ul class="left">
+				<li class="szsy"><a href="#">设为首页</a></li>
+				<li class="scbz"><a href="#">收藏本站</a></li>
+				<li class="yyxz"><a href="#">语言选择</a></li>
+				<li class="xz"><a href="#">永高APP下载</a></li>
+			</ul>
+			<ul class="right">
+				<li><a href="#">登录</a></li>
+				<li><a href="#">注册</a></li>
+				<li><a href="customerService.html">客服中心</a></li>
+				<li><a href="#">免费试玩</a></li>
+				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
+			</ul>
+		</div>
+	</nav>
+
+	<!-- 登陆后navtop -->
+	<!-- <nav class="top">
+		<div class="container center-block">
+			<ul class="left">
+				<li class="szsy"><a href="#">设为首页</a></li>
+				<li class="scbz"><a href="#">收藏本站</a></li>
+				<li class="yyxz"><a href="#">语言选择</a></li>
+				<li class="xz"><a href="#">永高APP下载</a></li>
+			</ul>
+			<ul class="right">
+				<li><a href="#">账号：18848614754</a></li>
+				<li><a href="#">注销</a></li>
+				<li><a href="customerService.html">客服中心</a></li>
+				<li><a href="#">消息<span class="info-num">(10)</span></a></li>
+				<div class="all-game-btn pull-left"><a href="#">所有游戏 </a></div>
+			</ul>
+		</div>
+	</nav> -->
+	<!-- 登陆后navtop END -->
+	
+	<nav class="main center-block">
+		<div class="brand"><img src="img/index/logo.png" alt="永高娱乐"></div>
+		<div class="yg-title"><span></span></div>
+	</nav>
+</header>
