--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -62,6 +62,9 @@ button.primary{
     font-size: 14px;
     cursor: pointer;
 }
+.warning{
+	color: #FF701A;
+}
 
 .yg-checkbox {
 	position: relative;
@@ -192,18 +195,23 @@ header {
                     line-height: 12px;
                     padding: 0 8px;
                     border-right: 1px solid rgba(255, 255, 255, 0.2);
-                }           
+				}           
+				.info-num{
+					color: #A02F2F;
+				}
             }
             li:nth-last-child(2){            
                 a{
-                    border-right: none;
+					border-right: none;
+					padding-right: 0;
                 }
             }
             .all-game-btn {
                 display: flex;
                 align-items: center;
                 margin-left: 16px;
-                padding: 0 13px;
+				padding: 0 13px;
+				background-color: #3C3D3C;
                 a {
                     display: block;
                     line-height: 40px;
@@ -263,7 +271,8 @@ header {
             display: flex;
             .input {
                 width: 136px;
-                border-radius:  4px 0px 0px 4px;
+				border-radius:  4px 0px 0px 4px;
+				outline: none;
             }
             .search-btn {
                 width: 34px;
@@ -273,7 +282,8 @@ header {
                 background-image: url(../img/index/shousou-icon.png);
                 background-repeat: no-repeat;
                 background-size: 20px;
-                background-position: center;
+				background-position: center;
+				cursor: pointer;
             }
 		}
 		.yg-title{
@@ -506,8 +516,8 @@ footer {
             display: inline-block;
             width: 20px;
             height: 20px;
-            background-color: #666;
-            margin-right: 9px;
+			margin-right: 9px;
+			background-repeat: no-repeat;
         }
         &:last-of-type{
             margin-bottom: 0;
@@ -517,7 +527,11 @@ footer {
             background-color: #FAFAFB;
             color: #FF701A;
             border-left: 3px solid #1A8CFF;
-        }
+		}
+		&:hover{
+			background-color: #FAFAFB;
+            color: #FF701A;
+		}
     }
 }
 
