--- a/src/scss/wallet.scss
+++ b/src/scss/wallet.scss
@@ -1,26 +1,82 @@
-.user-wallet{
-    display: flex;
-    min-height: 806px;
-    margin-top: 20px;
-    margin-bottom: 60px;
-    .content{
-        flex: 1;
-        background-color: #fff;
-        border-radius:4px;
-        .title{
-            padding-left: 30px;
-            padding-top: 37px;
-            border-bottom: 1px solid #E6E6E6;
-            span{
-                display: inline-block;
-                line-height: 18px;
-                font-size: 18px;
-                font-weight:400;
-                color: #333;
-                padding-bottom: 6px;
-                border-bottom: 3px solid #1A8CFF;
-            }
-        }
-        
-    }
+.user-wallet {
+	display: flex;
+	min-height: 806px;
+	margin-top: 20px;
+	margin-bottom: 60px;
+
+	.content {
+		flex: 1;
+		background-color: #fff;
+		border-radius: 4px;
+
+		.title {
+			padding-left: 30px;
+			padding-top: 37px;
+			border-bottom: 1px solid #E6E6E6;
+
+			span {
+				display: inline-block;
+				line-height: 18px;
+				font-size: 18px;
+				font-weight: 400;
+				color: #333;
+				padding-bottom: 6px;
+				border-bottom: 3px solid #1A8CFF;
+			}
+		}
+
+	}
+
+	.sidebar {
+		.icon {
+			background-image: url('../img/walletSprite.png');
+		}
+
+		.zxqb {
+			background-position: 0px -50px;
+		}
+
+		.yxqb {
+			background-position: -50px 0px;
+		}
+
+		.cz {
+			background-position: 0px 0px;
+		}
+
+		.tx {
+			background-position: 0px -25px;
+		}
+
+		.edzh {
+			background-position: -50px -50px;
+
+		}
+
+		.item.active,
+		.item:hover {
+			.zxqb {
+				background-position: -25px -50px;
+			}
+
+			.yxqb {
+				background-position: -50px -25px;
+
+			}
+
+			.cz {
+				background-position: -25px 0px;
+
+			}
+
+			.tx {
+				background-position: -25px -25px;
+
+			}
+
+			.edzh {
+				background-position: -75px 0px;
+			}
+		}
+	}
 }
