--- a/src/scss/withdraw.scss
+++ b/src/scss/withdraw.scss
@@ -1,6 +1,4 @@
-.recharge {
-	position: relative;
-
+.withdraw{
 	.title {
 		display: flex;
 		justify-content: space-between;
@@ -11,63 +9,16 @@
 			color: #1A8CFF;
 		}
 	}
-
-	.pay-type-wrap {
-		display: flex;
-		justify-content: center;
-		height: 50px;
-		line-height: 50px;
-
-		.item {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			width: 160px;
-			border: 1px solid #F5F5F5;
-			text-align: center;
-			font-size: 14px;
-			user-select: none;
-			cursor: pointer;
-
-			&.active {
-				border-color: #FF701A;
-				color: #FF701A;
-			}
-
-			.pay-icon {
-				display: block;
-				width: 30px;
-				height: 30px;
-				margin-right: 6px;
-				background-repeat: no-repeat;
-				background-image: url('../img/payiconSprite.png');
-
-				&.wx {
-					background-position: 0px 0px;
-				}
-
-				&.zfb {
-					background-position: -35px -35px;
-				}
-
-				&.wing {
-					background-position: -35px 0px;
-				}
-
-				&.card {
-					background-position: 0px -35px;
-				}
-			}
-		}
-	}
-
-	.wx-pay {
-		margin-left: 166px;
+	.form-wrap{
+		margin-left: 153px;
 		margin-top: 55px;
-
 		.item {
 			margin-bottom: 20px;
-
+			label{
+				display:inline-block;
+				width: 84px;
+				text-align: right;
+			}
 			.input-box {
 				margin-left: 30px;
 				width: 264px;
@@ -76,11 +27,15 @@
 				font-size: 14px;
 			}
 		}
-
 		.amount-wrap {
 			margin-top: 36px;
 			display: flex;
 
+			.label{
+				display:inline-block;
+				width: 84px;
+				text-align: right;
+			}
 			.list {
 				width: 520px;
 				margin-left: 30px;
@@ -152,38 +107,6 @@
 			height: 50px;
 			margin-left: 190px;
 			font-size: 16px;
-		}
-	}
-
-	.bottom-tip {
-		position: absolute;
-		width: 910px;
-		height: 110px;
-		margin: 0 30px;
-		padding-top: 10px;
-		border-top: 1px solid #E6E6E6;
-		font-size: 12px;
-		bottom: 0;
-
-		.tit {
-			display: flex;
-			align-items: center;
-			margin-bottom: 10px;
-
-			&::before {
-				content: "";
-				display: block;
-				width: 14px;
-				height: 14px;
-				background: #FF701A;
-				border-radius: 50%;
-				margin-right: 8px;
-			}
-		}
-
-		.text {
-			color: #999999;
-			line-height: 20px;
 		}
 	}
 }
